@@ -11,10 +11,11 @@ Vue.component('lms-volume', {
  <v-card>
   <v-container grid-list-md text-xs-center>
    <v-layout row wrap>
+    <v-flex xs12 class="vol-text">{{playerVolume}} %</v-flex xs12>
     <v-flex xs12>
      <v-layout>
       <v-btn flat icon @click.stop="volumeDown" class="vol-btn"><v-icon>volume_down</v-icon></v-btn>
-      <v-slider step="1" v-model="playerVolume" class="vol-slider" thumb-label="always"></v-slider>
+      <v-slider step="1" v-model="playerVolume" class="vol-slider"></v-slider>
       <v-btn flat icon @click.stop="volumeUp" class="vol-btn"><v-icon>volume_up</v-icon></v-btn>
      </v-layout>
     </v-flex>
